@@ -3,6 +3,6 @@ jQuery(document).ready(function($){
 	/* Put any theme-specific JS here... */
 
 	// Enable toggle for Main menu on tablets and mobile
-	$('.mobile-menu-toggle').toggleMenu({'viewport':979});
+	$('.mobile-menu-toggle').toggleMenu({'viewport':992});
 
 });
