@@ -30,21 +30,23 @@ Author URI: http://www.themeblvd.com
 @media (max-width: 992px) {
 	.site-header > .wrap {
 		max-width: 738px;
+		padding: 15px 20px 15px 20px;
+		position: relative;
 	}
 }
 @media (max-width: 767px) {
 	.site-header > .wrap {
 		max-width: 480px;
-		padding: 15px;
 	}
 }
 .header-content > .wrap {
 	margin: 0 0 20px 0;
 	padding: 0;
 }
-@media (max-width: 767px) {
+@media (max-width: 992px) {
 	.header-content > .wrap {
 		margin: 0;
+		position: static;
 	}
 }
 
@@ -71,7 +73,7 @@ Author URI: http://www.themeblvd.com
 	padding: 6px 0 0 0;
 	text-align: right;
 }
-@media (max-width: 767px) {
+@media (max-width: 992px) {
 	.header-addon {
 		display: none;
 	}
