@@ -31,7 +31,7 @@ Author URI: http://www.themeblvd.com
 	padding: 6px 0 0 0;
 	text-align: right;
 }
-@media (max-width: 767px) {
+@media (max-width: 992px) {
 	.header-addon {
 		display: none;
 	}
