@@ -18,6 +18,7 @@ Jump Start Changelog
 * Darkened body text in WordPress page editor.
 * CSS tweaks to buttons.
 * Improved appearance of text logo option with "Entrepeneur" theme base.
+* Mobile navigation toggle now displays at tablet viewport and in right of header, across all theme bases.
 * Main menu font size made smaller for tablets and sticky menu to fit more buttons.
 * Fixed: Image cropping with tb_x_large, tb_large, and tb_medium sizes.
 * Fixed: Post Showcase (no masonry) not displaying right with excerpts.
